--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-query": "^5.24.1",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "headless-pagination": "^0.1.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
+    "rxjs": "^7.8.1",
     "tailwindcss": "^3.4.1",
+    "universal-cookie": "^7.1.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
