--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-select": "^5.8.0",
-    "react-timelines-issa": "^2.7.22",
+    "react-timelines": "^2.6.1",
     "react-toastify": "^10.0.4",
     "rxjs": "^7.8.1",
     "tailwindcss": "^3.4.1",
