--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,4 @@
-VITE_APP_API="http://w4.devbro.com/api/v1/"
-VITE_APP_UNSPLASH_CLIENT_ID="pWN2AJ4yjIeVTsog1vUngVwvelWFB17ZGQBx8N7QpEk"
+VITE_APP_API="http://localhost/"
 VITE_STRICT_MODE=false
 VITE_APP_NOTIFICATION_TIMEOUT=35000
 VITE_EDITOR=code
